# dragon

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  run-clang-format.py  todo.txt
.github/workflows/: run-tests.yml
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  doxygen.cfg.in
examples/algos/highest-power-of-two/: example-1.cpp
examples/algos/longest-increasing-subsequence/: example-1.cpp  example-2.cpp
examples/algos/subset-xor-maximization/: example-1.cpp
examples/core/util/: msb_pos.cpp
examples/ds/disjoint_set_union/: example-1.cpp
examples/ds/segment-tree/: example-1.cpp  example-2.cpp
examples/ds/sparse-table/: example-1.cpp  example-2.cpp
examples/ds/sparse-table-idempotent/: example-1.cpp  example-2.cpp
examples/ds/sqrt-decomposition/: example-1.cpp
examples/graph/: graph.cpp
examples/graph/min_spanning_tree/: example-1.cpp
examples/graph/shortest_path/: example-1.cpp
examples/maths/binary-exponentiation/: example-1.cpp
examples/maths/chinese-remainder-theorem/: example-1.cpp
examples/maths/euler-totient/: example-1.cpp
examples/maths/extended-euclid-gcd/: example-1.cpp
examples/maths/factorization/: example-1.cpp
examples/maths/linear-diophantine-equation/: example-1.cpp
examples/maths/mod-inverse/: example-1.cpp
examples/maths/sieve/: example-1.cpp
examples/number-theory/binary-exponentiation/: example-1.cpp
examples/number-theory/chinese-remainder-theorem/: example-1.cpp
examples/number-theory/euler-totient/: example-1.cpp
examples/number-theory/extended-euclid-gcd/: example-1.cpp
examples/number-theory/factorization/: example-1.cpp
examples/number-theory/linear-diophantine-equation/: example-1.cpp
examples/number-theory/mod-inverse/: example-1.cpp
examples/number-theory/sieve/: example-1.cpp
examples/sorting/counting-sort/: example-1.cpp  example-2.cpp
examples/string/robin-karp/: example-1.cpp
examples/tree/euler-tour/: example-1.cpp
examples/tree/lowest-common-ancestor/: example-1.cpp
examples/tree/tree/: example-1.cpp  example-2.cpp
include/dragon/: constants.hpp  utils.hpp
include/dragon/algos/: highest-power-of-two.hpp  longest-increasing-subsequence.hpp  subset-xor-maximization.hpp
include/dragon/core/: constants.hpp  utils.hpp
include/dragon/ds/: disjoint-set-union.hpp  disjoint_set_union.hpp  segment-tree.hpp  sparse-table-idempotent.hpp  sparse-table.hpp  sqrt-decomposition.hpp
include/dragon/graph/: graph.hpp  (+4 more)
include/graph/: graph.hpp
tests/: CMakeLists.txt
tests/algos/: highest-power-of-two.cpp  subset-xor-maximization.cpp
tests/core/: msb_pos.cpp
tests/ds/: disjoint_set_union.cpp
tests/graph/: graph.cpp  min_spanning_tree.cpp  shortest_path.cpp
tests/maths/: binary-exponentiation.cpp  factorization.cpp
tests/number-theory/: binary-exponentiation.cpp  factorization.cpp
tests/sorting/: counting-sort.cpp
tests/string/: rabin-karp.cpp
tests/tree/: tree.cpp
(+23 files in other folders)
